Footer overlap fix

--- a/airbitz/airbitz/static/css/global-stylesheet.css
+++ b/airbitz/airbitz/static/css/global-stylesheet.css
@@ -482,8 +482,8 @@
   margin-bottom: 5px;
 }
 .biz-info-two .panel {
-  -webkit-box-shadow: 0 0 0 2px #ffffff;
-  box-shadow: 0 0 0 2px #ffffff;
+  -webkit-box-shadow: 0 0 0 2px white;
+  box-shadow: 0 0 0 2px white;
 }
 .biz-info-two .panel .panel-image {
   overflow: hidden;
@@ -959,7 +959,7 @@
   padding: 10px 0;
   background-color: #2291cf;
   color: #fff;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 400;
 }
 #footer a {
@@ -1174,8 +1174,8 @@ body #wrap {
 }
 body .main-content {
   background: rgba(255, 255, 255, 0.7);
-  -webkit-box-shadow: 0 0 0 2px #ffffff;
-  box-shadow: 0 0 0 2px #ffffff;
+  -webkit-box-shadow: 0 0 0 2px white;
+  box-shadow: 0 0 0 2px white;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
   -webkit-animation: fadein 2s;
