--- a/airbitz/airbitz/static/less/footer.less
+++ b/airbitz/airbitz/static/less/footer.less
@@ -6,7 +6,7 @@
     background-color: @ab-blue;
     color: #fff;
 //    border-top: 2px solid #eee;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 400;
 
     a {
